--- a/docs/webiny-overview/performance-benchmark/introduction.mdx
+++ b/docs/webiny-overview/performance-benchmark/introduction.mdx
@@ -26,22 +26,22 @@ Webiny has several apps and APIs. For this benchmark we decided to pick 3 action
 2. Call the Headless CMS Preview API and retrieve a record ([view results](/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark))
 3. Deliver a page created by the Page Builder ([view results](/docs/webiny-overview/performance-benchmark/pb-deliver-a-page))
 
-The tests on the Headless CMS API provide a good reference on both how the Headless CMS scales and performs, but the same result can be expected if you were to create a custom API endpoint on Webiny, not using the Headless CMS.
+The tests on the Headless CMS API provide a good reference on both how the Headless CMS scales and performs, but the same performance can be expected if you were to create a custom API endpoint on Webiny, not using the Headless CMS. The performance of the Preview API is expected to be identical to the Read API. We picked the Preview API because it was easier to setup the test since we didn't need to publish records after we inserted them.
 
-The Page Builder page delivery test is used to showcase how Webiny can serve your both static and dynamic pages.
+The Page Builder page delivery test is used to showcase how Webiny can serve a static page.
 
 ## Execution
 
 We deployed Webiny into an AWS region, in our case `eu-west-2` (London). This is the basic vanilla Webiny setup you would get if you follow our [install Webiny tutorial](/docs/tutorials/install-webiny). We ran all 3 tests using this setup. Afterwards we modified one of the infrastructure resources and repeated tests 1 and 2. All the details can be found in the test results.
 
-To run the test we deployed an EC2 machine in the same region to minimize the network latency. This machine was used to generate the load for the test. The machine instance type we used was `c5.18xlarge`. We used a fairly powerful instance as we needed to generate a lot of load for some of the tests and didn't want to be CPU, memory or network bound.
+To run the test we deployed an EC2 machine in the same region. This machine was used to generate the load for the test. The machine instance type we used was `c5.18xlarge`. We used a fairly powerful instance as we needed to generate a lot of load for some of the tests and didn't want to be CPU, memory or network bound.
 
 The machine was a base Ubuntu instance with only Java and Apache JMeter installed.
 The tests were executed using the Apache JMeter CLI. For each of the tests we are providing a `jmx` file so you can run the same on your end.
 
 ## Cost benchmark
 
-Besides covering the performance aspect of this benchmark, we also wanted to focus on the cost. A lot of people have questions and concerns when it comes to estimating costs of serverless infrastructure. To help answer those questions when it comes to Webiny, you can use the numbers from this benchmark to help you estimate your potential cost.
+Besides covering the performance aspect of this benchmark, we also wanted to focus on the cost. A lot of people have questions and concerns when it comes to estimating cost of serverless infrastructure. To help answer those questions when it comes to Webiny, you can use the numbers from this benchmark to help you estimate your potential cost.
 
 ## Scaling the performance
 
