Added charts to the report

--- a/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark.mdx
+++ b/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark.mdx
@@ -15,6 +15,10 @@ description: Webiny Headless CMS performance benchmark.
 
 ## Results
 
+import SummarySvg from "./assets/hc-read-api/summary.svg";
+
+<SummarySvg className="full-width" />
+
 | Test   | Records in database | Records requested | Avg. response time (ms) | p95 response time (ms) | Error rate (%) | Throughput (req/sec) |
 | ------ | ------------------: | ----------------: | ----------------------: | ---------------------: | -------------: | -------------------: |
 | Test A |              77,197 |           103,489 |                  304.32 |                 403.00 |          1.65% |               156.74 |
@@ -44,6 +48,8 @@ As an example say your average visitors stays on your site 5 minutes, and does a
 ### What is the error rate?
 
 It's very hard to correctly estimate what is the exact number of req/sec a certain Elasticsearch instance can take. In our tests as long as the error rate was below 2% we marked the test as successful as it was giving us a fair estimate of how much load we can send to the API. Of course in production cases, if you're constantly seeing errors, you would upgrade your instance.
+
+---
 
 ## Benchmark overview
 
@@ -81,9 +87,19 @@ From the query you can see we are requesting the top-level record, but also 2 re
 
 This test is following the same plan and load structure as the [Headless CMS write operation benchmark](/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark#test-plan).
 
-### Response times
+---
 
-### Test D
+## Report
+
+:::info
+
+We only extracted the charts for the last 2 tests as most charts showed the same behavior. In case you want to see the full report with all the charts for all the tests, [click here](https://github.com/webiny/benchmark/tree/main/benchmarks/results/hc-read-data).
+
+:::
+
+### Response time
+
+#### Test D
 
 <img
   src={require("./assets/hc-read-api/response-time-d.png").default}
@@ -94,7 +110,7 @@ This test is following the same plan and load structure as the [Headless CMS wri
 
 The response time was mostly consistent, with the exception around the 14:21 mark. At that point the response times spiked for a few seconds but then leveled off to the previous performance and stayed stable for next 5 minutes, until the end of the test.
 
-### Test E
+#### Test E
 
 <img
   src={require("./assets/hc-read-api/response-time-e.png").default}
@@ -105,7 +121,7 @@ The response time was mostly consistent, with the exception around the 14:21 mar
 
 ### Throughput
 
-### Test D
+#### Test D
 
 <img
   src={require("./assets/hc-read-api/throughput-d.png").default}
@@ -114,7 +130,7 @@ The response time was mostly consistent, with the exception around the 14:21 mar
   alt="Headless CMS benchmark - Throughput"
 />
 
-### Test E
+#### Test E
 
 <img
   src={require("./assets/hc-read-api/throughput-e.png").default}
@@ -180,6 +196,20 @@ The cost of serverless components has been calculated based on their usage. The 
 Notice how the test E is cheaper than test D, while E handled almost 3M requests during the test, versus test E that handled 1.72M. The only difference was in the Elasticsearch instance.
 
 :::
+
+### Cost per 10k requests
+
+import CostPerRequestSvg from "./assets/hc-read-api/cost-per-request.svg";
+
+<CostPerRequestSvg className="full-width" />
+
+| Test   |      Hits |                     Total cost |                     Cost per request |
+| ------ | --------: | -----------------------------: | -----------------------------------: |
+| Test A |    77,197 |  <!-- prettier-ignore -->$1.01 | <!-- prettier-ignore -->$0.000013083 |
+| Test B |   759,679 |  <!-- prettier-ignore -->$7.73 | <!-- prettier-ignore -->$0.000010175 |
+| Test C | 1,506,112 | <!-- prettier-ignore -->$15.25 | <!-- prettier-ignore -->$0.000010125 |
+| Test D | 3,319,812 | <!-- prettier-ignore -->$34.52 | <!-- prettier-ignore -->$0.000010398 |
+| Test E | 3,343,666 | <!-- prettier-ignore -->$34.79 | <!-- prettier-ignore -->$0.000010405 |
 
 ### CloudFront
 
