--- a/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark.mdx
+++ b/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark.mdx
@@ -235,19 +235,19 @@ The cost of serverless components has been calculated based on their usage. The 
 
 :::
 
-### Cost per request
+### Cost per 10k requests
 
 import CostPerRequestSvg from "./assets/hc-write-api/cost-per-request.svg";
 
 <CostPerRequestSvg className="full-width" />
 
-| Test   |      Hits |                     Total cost |                     Cost per request |
-| ------ | --------: | -----------------------------: | -----------------------------------: |
-| Test A |    77,197 |  <!-- prettier-ignore -->$1.01 | <!-- prettier-ignore -->$0.000013083 |
-| Test B |   759,679 |  <!-- prettier-ignore -->$7.73 | <!-- prettier-ignore -->$0.000010175 |
-| Test C | 1,506,112 | <!-- prettier-ignore -->$15.25 | <!-- prettier-ignore -->$0.000010125 |
-| Test D | 3,319,812 | <!-- prettier-ignore -->$34.52 | <!-- prettier-ignore -->$0.000010398 |
-| Test E | 3,343,666 | <!-- prettier-ignore -->$34.79 | <!-- prettier-ignore -->$0.000010405 |
+| Test   |      Hits |                     Total cost |            Cost per 10k requests |
+| ------ | --------: | -----------------------------: | -------------------------------: |
+| Test A |    77,197 |  <!-- prettier-ignore -->$1.01 | <!-- prettier-ignore -->$0.13083 |
+| Test B |   759,679 |  <!-- prettier-ignore -->$7.73 | <!-- prettier-ignore -->$0.10175 |
+| Test C | 1,506,112 | <!-- prettier-ignore -->$15.25 | <!-- prettier-ignore -->$0.10125 |
+| Test D | 3,319,812 | <!-- prettier-ignore -->$34.52 | <!-- prettier-ignore -->$0.10398 |
+| Test E | 3,343,666 | <!-- prettier-ignore -->$34.79 | <!-- prettier-ignore -->$0.10405 |
 
 ### CloudFront
 
