--- a/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
+++ b/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
@@ -93,6 +93,9 @@ Which brings us to:
 <!-- prettier-ignore -->
 **TOTAL COST** = $6.73
 
+<!-- prettier-ignore -->
+**COST PER 10K HITS** = $0.02959
+
 ---
 
 You can download and check the full report here: https://github.com/webiny/benchmark/tree/main/benchmarks/results/pb-page-delivery
