Added a note on the DynamoDB flow on the Read API.

--- a/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark.mdx
+++ b/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark.mdx
@@ -87,6 +87,20 @@ From the query you can see we are requesting the top-level record, but also 2 re
 
 This test is following the same plan and load structure as the [Headless CMS write operation benchmark](/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark#test-plan).
 
+### Request flow
+
+Every API read request has the following flow:
+
+Client -> CloudFront -> ApiGateway -> Lambda -> Elasticsearch
+
+:::info
+
+There is also a different flow, where the Lambda function goes to DynamoDB instead of Elasticsearch. This is only when the client is requesting a single object and is providing a primary key for that object.
+
+All other requests go Elasticsearch as it provides better filtering, searching and sorting capabilities. We decided to test the Elasticsearch in our benchmark as it will be a more common one in production. In terms of the performance on the DynamoDB flow, it will be similar to what you see in the Headless CMS Write API benchmark.
+
+:::
+
 ---
 
 ## Report
